# kbase-ds-widget-tool

./: .gitignore  Dockerfile  LICENSE  README.md  Taskfile  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
.github/: CODEOWNERS  pull_request_template.md  reusable_build-push.yml
.github/workflows/: manual-build.yml  pr_build.yml  release-main.yml  reusable_pre-build.yml  reusable_test.yml
docs/: adding-demo-widgets.md  adding-widgets-to-an-existing-dynamic-serivce.md  configuring-apps.md  creating-dynamic-service-for-widgets-tldr.md  creating-dynamic-service-for-widgets.md  dev-notes.md  index.md  publishing-your-service.md  registering-your-service.md  removing-demo-widgets.md  tasks.md  updating-narrative-viewers.md  using-demo-widgets.md  writing-a-python-app-output-viewer.md  writing-a-python-data-viewer.md  writing-a-widget.md
resources/devcontainer/.devcontainer/: devcontainer.json  docker-compose.yml
resources/docker/: docker-compose.yml
resources/docs/widgets/: adding-a-javascript-widget.md  adding-a-python-widget.md  advanced-javascript-widgets.md  advanced-python-widgets.md  howto.md  narrative-integration.md  startup.md  widgets.md
resources/snippets/: dynamic-service-config.txt  gitignore.txt  makefile-compile.txt  service-impl-snippet-0.txt  service-impl-snippet-1.txt  service-impl-status-debugging.txt  service-server-snippet-0.txt  service-server-snippet-1.txt
src/: check.py  check_module.py  clean.py  help.py  init_module.py  status.py  utils.py
src/ds_widget_tool/: utils.py  widget_support.py
(+72 files in other folders)
