[tool.poetry]
name = "ds-widget-tool"
version = "0.0.1"
description = "Dynamic Service Widget Tool"
authors = ["KBase Developers"]
license = "SEE LICENSE IN LICENSE"


[tool.poetry.dependencies]
python = "~3.12.0"
pyyaml = "6.0.1"

[tool.poetry.dev-dependencies]
pytest = "7.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
